tests/invalid/expected_type.out
tests/invalid/expected_type.ri:3:9: error: expected type, found function
<<<<<<< HEAD
  3 | fn x(a: my_fn) {}
    |         ^
rivetc: error: could not compile module `expected_type`, aborting due to previous error
=======
rivetc: error: could not compile package `expected_type`, aborting due to previous error
>>>>>>> fd5cbb707991f17d1cc05e277c0ef9c401dd652c
